<?xml version="1.0"?>
<package format="2">
  <name>gazebo_simulator</name>
  <version>0.0.1</version>
  <description>Gazebo Simulator bringup</description>
  <maintainer email="mino@inha.edu">Minho Lee</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export></export>
</package>
